# Aslis-GTK-----

./: .gitignore  README.md  aslis.dpbo.id.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-aslis.dpbo.id.json/: init
.flatpak-builder/checksums/: x86_64-aslis.dpbo.id.json
data/: aslis.dpbo.id.desktop.in  aslis.dpbo.id.gschema.xml  aslis.dpbo.id.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app_route.ui  application.vala  aslis-gtk.gresource.xml  main.vala  meson.build
src/database/: accounts.csv  almus_ternak.csv  ternak.csv
src/model/: grid_ternak.vala  kandang.vala  login.vala  register.vala  sample.vala  ternak.vala
src/pages/: add_modal.ui  add_modal.vala  aslis_app.ui  aslis_app.vala  auth.ui  auth.vala  grid.ui  window.ui  window.vala
src/style/: add_modal.css  aslis_app.css
